--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,43 @@ body {
     text-transform: uppercase;
     transition: .8s;
 }
+
+.ensakn{
+    text-align: center;
+    position: absolute;
+    cursor: pointer;
+    font-weight: 600;
+    bottom: 0;
+    left: 430px;
+    right: 430px;
+    padding-bottom: 70px;
+    font-size: 1.1em;
+    border-radius: 5px;
+    transition: .25s;
+    color: #333;
+  }
+
+.ensakn:hover{
+    color: #96733b;
+}
+
+.ensakn2{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    padding: 1.4em;
+    font-size: 1.1em;
+  }
+
+.ensakn2 a{
+    text-decoration: none;
+    color: #333;
+    transition: .25s;
+    padding: 5px;
+}
+
+.ensakn2 a:hover{
+    color: #96733b;
+}
